# lockbox-tracking

./: README.md
results/: visualize_tools.py
results/data/: associated_points.csv  converge_possibilities.csv  mod_articulated_error.csv  obs_articulated_error.csv  rigid_error_0.0-0.4.csv  rigid_error_0.2-0.37_10_iter.csv
src/dart_example/: CMakeLists.txt  Readme.md  package.xml  params.yaml
src/dart_example/launch/: dart.launch
src/dart_example/models/: lockboxIntersection.txt  lockbox_mov_articulated.xml  lockbox_rigid.xml
src/dart_example/models/lockbox_bags/lockbox_static/: depthimageproc.launch
src/dart_example/node/: track_lockbox_mov.cpp  track_lockbox_mov_exp.cpp  track_lockbox_rigid.cpp  track_lockbox_rigid_exp.cpp  track_space_justin_demo.cpp
